2007-01-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hexl.el (hexlify-buffer, dehexlify-buffer): Don't complain and don't
	activate undo when undo is not active.
	Reported by Chris <christopher.ian.moore@gmail.com>.

2007-01-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ffap.el (ffap-next-regexp, ffap-machine-p, ffap-newsgroup-regexp)
	(ffap-newsgroup-p, ffap-alist, ffap-string-at-point-mode-alist)
	(ffap-url-at-point): Use char-classes rather than "a-z".

2007-01-10  Juanma Barranquero  <lekktu@gmail.com>

	* ediff-init.el (ediff-autostore-merges):
	* textmodes/fill.el (fill-region): Doc fix.

2007-01-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-ensure-safe-dir): UIDs may be floats.

2007-01-10  Richard Stallman  <rms@gnu.org>

	* battery.el (battery-linux-proc-acpi): Use ignore-errors
	around calls to directory-files.

	* subr.el (momentary-string-display): Use save-excursion.

	* emacs-lisp/pp.el (pp-eval-expression): Once again eval the
	argument, but read it as `X' does.

2007-01-09  Juri Linkov  <juri@jurta.org>

	* info.el (Info-fontify-node): Don't hide node names of index entries.

	* faces.el (momentary): Change :group to basic-faces where all
	basic faces belong to.  Add :version.

2007-01-09  Lennart Borgman  <lennart.borgman.073@student.lu.se>

	* tutorial.el (tutorial--display-changes): Show M-x sequence if no
	keybinding is found.
	(tutorial--find-changed-keys): Never treat null keybinding as a
	remapping.

2007-01-09  Martin Rudalics  <rudalics@gmx.at>

	* wdired.el (wdired-xcase-word): Skip non-word read-only characters.

2007-01-09  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el
	(select-safe-coding-system-interactively): Fix message.

2007-01-09  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-process-one-action): Remove `with-timeout'.
	(tramp-process-actions): Add optional parameter TIMEOUT.
	(tramp-open-connection-telnet, tramp-open-connection-rsh)